--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "Jake Lamb",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
